--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Avara level editing enhancements for VS Code.",
   "publisher": "skedastik",
   "repository": "https://github.com/skedastik/vscode-ty-levels",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.97.0"
   },
@@ -24,6 +24,10 @@
       {
         "command": "extension.removeEtags",
         "title": "Remove Etags"
+      },
+      {
+        "command": "extension.regenerateEtags",
+        "title": "Regenerate Etags"
       },
       {
         "command": "extension.pasteWithNewEtags",
