--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Avara level editing enhancements for VS Code.",
   "publisher": "skedastik",
   "repository": "https://github.com/skedastik/vscode-ty-levels",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.97.0"
   },
@@ -41,6 +41,18 @@
       {
         "command": "extension.findEtag",
         "title": "Find Etag"
+      },
+      {
+        "command": "extension.translateX",
+        "title": "Translate Elements Along X Axis"
+      },
+      {
+        "command": "extension.translateZ",
+        "title": "Translate Elements Along Z Axis"
+      },
+      {
+        "command": "extension.translateY",
+        "title": "Translate Elements Along Y Axis"
       }
     ]
   },
@@ -59,16 +71,21 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.97.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/sinon": "^17.0.4",
+    "@types/vscode": "^1.97.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "esbuild": "^0.24.2",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.7.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
+    "npm-run-all": "^4.1.5",
+    "sinon": "^19.0.2",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "mathjs": "^14.3.0"
   }
 }
