Add `setOnEtag` command

--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
       {
         "command": "extension.setParam",
         "title": "Set Param"
+      },
+      {
+        "command": "extension.setParamOnEtag",
+        "title": "Set Param on Element with Etag"
       }
     ],
     "keybindings": [
