--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 		"resolveJsonModule": true
-	}
+	},
+	"exclude": ["node-ty-levels/**"]
 }
